<resources>
    <string name="app_name">dhaberst-reflex</string>
    <string name="action_settings">Settings</string>
    <string name="Singleplayer">Singleplayer</string>
    <string name="Multiplayer">Multiplayer</string>
    <string name="twoplayers">2</string>
    <string name="threeplayers">3</string>
    <string name="fourplayers">4</string>
    <string name="selectplayers">Select Players</string>
    <string name="reactionstats">Reaction Stats</string>
    <string name="buzzerstats">Buzzer Stats</string>
    <string name="emailstats">Email Stats</string>
    <string name="title_activity_reaction_game">Reaction</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_number_of_players">Players</string>
    <string name="title_activity_two_player_game">Buzzer</string>
    <string name="title_activity_three_player_game">Buzzer</string>
    <string name="title_activity_four_player_game">Buzzer</string>
    <string name="playeronebuzz">PLAYER 1\nBUZZED</string>
    <string name="playertwobuzz">PLAYER 2\nBUZZED</string>
    <string name="playerthreebuzz">PLAYER 3\nBUZZED</string>
    <string name="playerfourbuzz">PLAYER 4\nBUZZED</string>
    <string name="instructions">TO BEGIN,\nPRESS THE YELLOW BUTTON\nTO START THE TIMER.\nWHEN IT TURNS YELLOW\nPRESS IT!</string>
    <string name="numberone">1</string>
    <string name="numbertwo">2</string>
    <string name="numberthree">3</string>
    <string name="numberfour">4</string>
    <string name="welcome">Welcome</string>
    <string name="twoplayer">2 Player</string>
    <string name="threeplayer">3 Player</string>
    <string name="fourplayer">4 Player</string>
    <string name="title_activity_buzzer_stats">BuzzerStatsActivity</string>
    <string name="clear">CLEAR</string>
    <string name="title_activity_reaction_stats">ReactionStatsActivity</string>
    <string name="Ok">Ok</string>
    <string name="title_activity_reactionstats">Reaction Statistics</string>
    <string name="title_activity_buzzerstats">Buzzer Statistics</string>
    <string name="emailtitle">Please Enter\nYour Email</string>
    <string name="send">Send</string>
    <string name="title_activity_email_pop">EmailPop</string>

</resources>
