<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#84d0ff">

    <Button
        android:layout_width="193dp"
        android:layout_height="193dp"
        android:id="@+id/oneplayerbutton"
        android:background="@drawable/buttontransition"
        android:text="@string/playeronebuzz"
        android:textSize="70sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="193dp"
        android:layout_height="193dp"
        android:id="@+id/twoplayerbutton"
        android:background="@drawable/buttontransition"
        android:textSize="70sp"
        android:text="@string/playertwobuzz"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="193dp"
        android:layout_height="193dp"
        android:id="@+id/threeplayerbutton"
        android:background="@drawable/buttontransition"
        android:textSize="70sp"
        android:text="@string/playerthreebuzz"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

</RelativeLayout>