<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#84d0ff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/buzzerstats"
        android:id="@+id/reactionstats"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/twoplayer"
        android:id="@+id/textView2"
        android:layout_marginLeft="7dp"
        android:layout_below="@+id/reactionstats"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="7dp"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/threeplayer"
        android:id="@+id/textView3"
        android:layout_marginLeft="7dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="90dp"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fourplayer"
        android:id="@+id/textView4"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="115dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/twoplayerstats"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/threeplayerstats"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/fourplayerstats"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clearbutton"
        android:background="#009eff"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="7dp"
        android:layout_marginRight="7dp"/>

</RelativeLayout>